--- a/src/assets/pages/portfolioHomePage/Intro.css
+++ b/src/assets/pages/portfolioHomePage/Intro.css
@@ -29,3 +29,7 @@ text-align: center;
     display: flex;
     justify-content: center;
 }
+.Contact img:hover{
+    transform: scale(1.46 );
+    transition: all 300ms ease-in-out;
+}
