continuing working on the about page

--- a/src/assets/pages/portfolioAboutPage/About.css
+++ b/src/assets/pages/portfolioAboutPage/About.css
@@ -3,7 +3,7 @@
     background-color: rgb(45, 45, 63);
     color: white;
     font-size: 23px;
-    background-size:100% ;
+    background-size:cover ;
     padding-top: 6%;
     padding-left:8%;
     padding-right: 10%;
