--- a/src/assets/pages/portfolioHomePage/Intro.css
+++ b/src/assets/pages/portfolioHomePage/Intro.css
@@ -1,11 +1,10 @@
 .introContainer{
     height: 100vh;
-    width: 100vw;
     background: url(/src/assets/images/img2.jpg) ;
     background-size:cover;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 .intro {
 width: 80%;
@@ -33,3 +32,10 @@ text-align: center;
     transform: scale(1.46 );
     transition: all 300ms ease-in-out;
 }
+.scroll{
+    display: flex;
+    justify-contents: center;
+}
+ .scroll:hover{
+    text-decoration: underline;
+} 
