continuing working on the about page1

--- a/src/assets/pages/portfolioHomePage/Intro.css
+++ b/src/assets/pages/portfolioHomePage/Intro.css
@@ -34,7 +34,7 @@ text-align: center;
 }
 .scroll{
     display: flex;
-    justify-contents: center;
+    justify-content: center;
 }
  .scroll:hover{
     text-decoration: underline;
