--- a/src/assets/components/portfolioNavBar/Navbar.css
+++ b/src/assets/components/portfolioNavBar/Navbar.css
@@ -1,7 +1,8 @@
 .navBar{
     display: flex;
     justify-content: center;
-    position: absolute;
+    position:fixed;
+
     background-color: black;
     width: 100%;
     top: 0;    
