--- a/src/assets/pages/portfolioAboutPage/About.css
+++ b/src/assets/pages/portfolioAboutPage/About.css
@@ -1,10 +1,13 @@
 .about{
-    display: flex;
-    background-color: rgb(45, 45, 63);
+    background:linear-gradient( #102b4a,rgb(30, 30, 68)) ;
     color: white;
     font-size: 23px;
     background-size:cover ;
+    min-height: 100vh;
+}
+.aboutPad{
     padding: 2em;
+    display: flex;
 }
 #Aboutme{
     flex: 4;
@@ -18,9 +21,14 @@
 .Aboutmecontents{
     flex: 6;
     padding-left: 25px;
+    display: flex;
+    flex-direction: column;
 }
 .About-mecontents{
     text-align: justify ;
+}
+.contactContainer{
+    padding-top: 4em
 }
 .abmel{
     color:white;
