--- a/src/assets/pages/portfolioContact/ContactUs.css
+++ b/src/assets/pages/portfolioContact/ContactUs.css
@@ -1,9 +1,16 @@
 .helloc{
     background-color: rgb(36, 35, 35);
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 80%;
+    min-height: fit-content;
+    height: 30em;
+}
+.helloCont{
+    width: 80%;
+    display: flex;
+    justify-content: center;
 }
 
 .hello{
