--- a/src/assets/pages/portfolioResume/Resume.css
+++ b/src/assets/pages/portfolioResume/Resume.css
@@ -95,3 +95,66 @@
     width: 10%;
     height: 50px;
 }
+@media screen and (max-height : 870px) {
+    .resumeContaienr{
+        height: 100%;
+    }
+}
+@media screen and (max-width: 650px ) {
+    .Resume{
+        background-color: white;
+        padding-top: 4em ;
+        display: block;
+        color: rgb(38, 30, 110);
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .flexright {
+        padding: .5em;
+        text-align: justify;
+    }
+    .Resume2{
+        background-color: white;
+        padding: 20px;
+        padding-bottom: 20px;
+        display: block;
+        color: rgb(38, 30, 110);
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .htmlbar{
+        border-radius: 50px;
+        background: linear-gradient(to bottom,rgb(32, 27, 27), rgb(63, 56, 56), rgb(32, 27, 27) ) ;
+        width: 100%;
+        height: 50px;
+    }
+    .htmlb {
+        border-radius: 50px;
+        background: linear-gradient(to bottom, rgb(38 30 110), rgb(75, 64, 180), rgb(38 30 110) );
+        width: 90%;
+        height: 50px;
+    }
+    .cssbar{
+        border-radius: 50px;
+        background: linear-gradient(to bottom,rgb(32, 27, 27), rgb(63, 56, 56), rgb(32, 27, 27) ) ;
+        width: 100%;
+        height: 50px;
+    }
+    .cssb {
+        border-radius: 50px;
+        background: linear-gradient(to bottom, rgb(38 30 110), rgb(75, 64, 180), rgb(38 30 110) );
+        width: 47%;
+        height: 50px;
+    }
+    .jscriptbar {
+        border-radius: 50px;
+        background: linear-gradient(to bottom,rgb(32, 27, 27), rgb(63, 56, 56), rgb(32, 27, 27) );
+        width: 100%;
+        height: 50px;
+    }
+    .jscriptb {
+        border-radius: 50px;
+        background: linear-gradient(to bottom, rgb(38 30 110), rgb(75, 64, 180), rgb(38 30 110) );
+        border-radius: 50px;
+        width: 15%;
+        height: 50px;
+    }
+}
