--- a/src/assets/components/portfolioNavBar/Navbar.css
+++ b/src/assets/components/portfolioNavBar/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     position:fixed;
-
+    
     background-color: black;
     width: 100%;
     top: 0;    
@@ -29,4 +29,7 @@
 }
 .navBar a:active{
     color: orange;
+}
+html{
+    scroll-behavior: smooth;
 }
