--- a/src/assets/components/portfolioNavBar/Navbar.css
+++ b/src/assets/components/portfolioNavBar/Navbar.css
@@ -33,3 +33,18 @@
 html{
     scroll-behavior: smooth;
 }
+@media screen and (max-width: 450px) {
+    .navBar li{
+        padding: 0;
+        display: inline-block;
+        margin: 5px;
+    }
+    .navBar ul{  
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    .navBar p{
+        margin: 3px;
+    }
+}
