--- a/src/assets/components/portfolioNavBar/Navbar.css
+++ b/src/assets/components/portfolioNavBar/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     position:fixed;
-    
+    min-height:50px ;
     background-color: black;
     width: 100%;
     top: 0;    
