--- a/src/assets/pages/portfolioHomePage/Intro.css
+++ b/src/assets/pages/portfolioHomePage/Intro.css
@@ -24,6 +24,10 @@ text-align: center;
     text-align: center; 
     margin: 0;
 }
+.intro p{
+    color: #7fa6e5;
+    /* #8ab4f8 */
+}
 .Contact{
     display: flex;
     justify-content: center;
