--- a/src/assets/components/scrollButton/ScrollButton.css
+++ b/src/assets/components/scrollButton/ScrollButton.css
@@ -1,26 +1,17 @@
-.backToTop{
-    background-color: blue;
-}
-.backToTop:hover{
-    transform: scale(1.06);
-    transition: all 300ms;
-/* }
-.arrowfooter2{
-    display: none; */
-}
-.buttonContainer{
-    display: fixed;
-    position: absolute;
-    right: 2em;
-    bottom: 2em;
-}
 .scrollButton{
     background-color: blue;
     outline: none;
     border: none;
     padding: 20px;
     border-radius: 30%;
+    position: fixed;
+    bottom: 2em;
+    right: 2em;
 }
+.scrollButton:hover{
+    transform: scale(1.06);
+    transition: all 300ms;
+ }
 .hidden {
     display: none;
 }
