--- a/src/assets/components/scrollButton/ScrollButton.css
+++ b/src/assets/components/scrollButton/ScrollButton.css
@@ -7,6 +7,7 @@
     position: fixed;
     bottom: 2em;
     right: 2em;
+    display: none;
 }
 .scrollButton:hover{
     transform: scale(1.06);
@@ -14,4 +15,9 @@
  }
 .hidden {
     display: none;
+}
+@media (max-height: 200vh) {
+    .scrollButton{
+        display: block;
+    }
 }
