--- a/src/assets/pages/portfolioContact/ContactUs.css
+++ b/src/assets/pages/portfolioContact/ContactUs.css
@@ -63,7 +63,7 @@
 .hrl{
     color: rgb(77, 89, 114);
 }
-@media screen and (max-width: 750px ) {
+@media screen and (max-width: 900px ) {
     .helloc {
         background-color: rgb(36, 35, 35);
         display: flex;
@@ -72,7 +72,8 @@
         align-items: center;
         min-height: -moz-fit-content;
         min-height: fit-content;
-        height: 100%;
+        /* height: 100%; */
+        height: 100vh;
     }
     .hello{
         display: block;
@@ -94,12 +95,12 @@
     .hellol {
         flex: 2 1;
         align-content: center, justify;
-        font-size: 20px;
+        font-size: 35px;
         padding-top: 10px;
     }
     .hellor {
         flex: 3 1;
-        font-size: 23px;
+        font-size: 35px;
         color: rgb(106, 106, 116);
     }
 }
