--- a/src/assets/pages/portfolioWorks/Works.css
+++ b/src/assets/pages/portfolioWorks/Works.css
@@ -9,7 +9,10 @@
     align-self: center ;
     display: flex;
     justify-content: center;
+    z-index: 2;
     flex-direction: column;
+    position: relative;
+
 }
 .wimg{
     display: flex;
