--- a/src/assets/pages/portfolioContact/ContactUs.css
+++ b/src/assets/pages/portfolioContact/ContactUs.css
@@ -5,7 +5,10 @@
     flex-direction: column;
     align-items: center;
     min-height: fit-content;
-    height: 30em;
+    height: 100vh;
+    z-index: 2;
+    position: relative;
+
 }
 .helloCont{
     width: 80%;
