Ill do the sidebar later

--- a/src/assets/components/portfolioFooter/Footer.css
+++ b/src/assets/components/portfolioFooter/Footer.css
@@ -12,7 +12,7 @@
     text-align: center;
 }
 .footnote a:link{
-    color: rgb(79, 152, 185);
+    color:#ffc107;
     text-decoration: none;
     font-size: 20px;
 }
