--- a/src/assets/pages/portfolioResume/Resume.css
+++ b/src/assets/pages/portfolioResume/Resume.css
@@ -7,7 +7,7 @@
 }
 .Resume{
     background-color: white;
-    padding-top: 4em ;
+    padding-top: 100px;
     display: flex;
     /* color: rgb(38, 30, 110); */
     color: #000000;
