--- a/src/assets/pages/portfolioResume/Resume.css
+++ b/src/assets/pages/portfolioResume/Resume.css
@@ -158,7 +158,7 @@
     }
     .htmlb {
         border-radius: 50px;
-        background: linear-gradient(to bottom, rgb(38 30 110), rgb(75, 64, 180), rgb(38 30 110) );
+        background: linear-gradient(to bottom, #8f542c, rgb(245 131 54), #8f542c);
         width: 92%;
         height: 50px;
     }
@@ -170,7 +170,7 @@
     }
     .cssb {
         border-radius: 50px;
-        background: linear-gradient(to bottom, rgb(38 30 110), rgb(75, 64, 180), rgb(38 30 110) );
+        background: linear-gradient(to bottom, #8f542c, rgb(245 131 54), #8f542c);;
         width: 57%;
         height: 50px;
     }
@@ -182,7 +182,7 @@
     }
     .jscriptb {
         border-radius: 50px;
-        background: linear-gradient(to bottom, rgb(38 30 110), rgb(75, 64, 180), rgb(38 30 110) );
+        background: linear-gradient(to bottom, #8f542c, rgb(245 131 54), #8f542c);;
         border-radius: 50px;
         width: 65%;
         height: 50px;
@@ -194,7 +194,7 @@
         height: 50px;
     }
     .cppb{
-        background: linear-gradient(to bottom, rgb(38 30 110),  rgb(75, 64, 180),  rgb(38 30 110) ) ;
+        background: linear-gradient(to bottom, #8f542c, rgb(245 131 54), #8f542c);;
         border-radius: 50px;
         width: 25%;
         height: 50px;
