--- a/src/assets/components/portfolioFooter/Footer.css
+++ b/src/assets/components/portfolioFooter/Footer.css
@@ -5,6 +5,8 @@
     justify-content:end;
     background-color: rgb(36, 35, 35);
     padding: 1%;
+    z-index: 2;
+    position: relative;
 }
 .footnote{
     color: rgb(50, 64, 77);
